# MDRTB-TPT-India

./: CMakeLists.txt  README.md  conanbuildinfo.mak  conanfile.txt  conanprofile.txt  readme
gitRep/: Driver.cpp  Driver.h  Functions.cpp  Functions.h  GlobalVariables.h  Household.cpp  Household.h  Main.cpp  Params.cpp  Params.h  Person.cpp  Person.h  Population.cpp  Population.h  Run.cpp  Run.hpp  Stats.cpp  Stats.h  ThreadID.hpp  ihs.cpp  ihs.hpp  lhc_10000.hpp  lhc_10000a.hpp  lhc_10000b.hpp  lhc_10000c.hpp  lhc_2880.hpp  lhc_6000.hpp  lhc_6000a.hpp  makefile  mdrtb_lhc_14.hpp  mdrtb_lhc_8.hpp  seedConfig.cfg
gitRep/R/r.src/: Functions.R  analysis.R  config.R  hhPlots.R  loglikelihoods.R  mcmc.analysis.R  mcmc.analysis.aws.R  mcmc.manualRun.R  mcmc.prior.dist.R  mcmc.toddPackage.Rout  run.mcmc1.R  run.mcmc2.R  sim.analysis.R
gitRep/R/r.src/PT/: functions.R
gitRep/R/r.src/calibration/DSTB/: analysis-dstb-annual.r
gitRep/R/r.src/calibration/demography/age-sex/: analyze.R  module.analyze.history.R  module.config.R  module.functions.R
gitRep/R/r.src/calibration/demography/hh/: module.functions.R
gitRep/R/r.src/todd.mcmc.package/: demonstration.R  examples_for_mcmc_code.R  pk-McMcexample.R  q_and_a_2012.03.21.R
gitRep/R/r.src/todd.mcmc.package/mcmc.sim/: DESCRIPTION  NAMESPACE
gitRep/R/r.src/todd.mcmc.package/mcmc.sim/R/: adaptive_blockwise_metropolis.R  helpers.R  mcmc_class.R  merge.R  parallelization.R  postprocessing.R  run_interface.R  sampling.R  simset_class.R  transformations.R
gitRep/R/r.src/todd.mcmc.package/mcmc.sim/backup_code/before rollback Feb 2020/: DESCRIPTION
gitRep/R/r.src/todd.mcmc.package/mcmc.sim/backup_code/before rollback Feb 2020/R/: adaptive_blockwise_metropolis.R  cache.R  helpers.R  merge.R  postprocessing.R  run_interface.R  simset_class.R  transformations.R
gitRep/R/r.src/todd.mcmc.package/mcmc.sim/backup_code/to rollback to working early Feb/: DESCRIPTION  NAMESPACE
gitRep/R/r.src/todd.mcmc.package/mcmc.sim/man/: add.parameters.Rd  assemble.mcmc.from.cache.Rd  cache.progress.Rd  check.merge.controls.Rd  create.mcmc.cache.Rd  extend.simulations.Rd  extract.simset.Rd  extract.simset.distribution.Rd  extract.simset.parameter.distribution.Rd  get.rhats.Rd  mcmc.merge.parallel.Rd  mcmc.merge.serial.Rd  process.transformations.Rd  remove.mcmc.cache.Rd  run.mcmc.from.cache.Rd  simset.Rd  trace.plot.Rd
gitRep/extra/: MARCC-dr-pop-gen.sh  MARCC-hhdemog.sh  MARCC-pt-missing.sh  MARCC-pt.sh  MARCC-pt1.sh  MARCC-pt2.sh  MARCC-pt3.sh  dr-dependancy-marcc.sh  dr-run.py  ds-good.py  ds-run.py  ds-stage-marcc-missing-128.sh  ds-stage-marcc.sh  ds-stage-over.py  ds-stage-run9.sh  ds-test.py  hh-demog.py  pop-gen.py  pt-run-missing.py  pt-run.py
(+11 files in other folders)
